<resources>
    <string name="app_name">UnsplashGalleryTest</string>
    <string name="search_hint">Type a query</string>
    <string name="no_results">No results 😓</string>
    <string name="retry">Retry</string>
    <string name="photo">Photo</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_settings">Settings</string>
</resources>