<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_gallery">

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.maxmakarov.gallery.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/gallery_fragment" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.maxmakarov.gallery.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/favourites_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.maxmakarov.gallery.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/settings_fragment" />
</navigation>